# diffalgebra

./: .gitignore  main.py  pyproject.toml
src/diffalgebra/: DifferentialAlgebra.py  __init__.py  constant_poly_ring.py  constant_ring.py  constant_ring_old.py  diff_ring.py  diff_ring_old.py  evolution_operator.py  evolutionary_operator.py  exceptions.py  kdv.py  ring_morphism.py  ring_registry.py
src/diffalgebra/old/: ExteriorDifferentialAlgebra.py  PoissonBrackets.py  constant_ring_old.py  diff_ring_old.py
tests/test_hypothesis/: strategies.py  strategies_old.py  test_constant_ring_properties.py  test_diff_ring_properties.py  test_evolution_operator.py
tests/test_manual/: test_antiderivative.py  test_constant_ring_unit.py  test_diff_ring.py  test_evolution_operator.py  test_integral.py  test_ring_morphism.py  test_ring_morphism_unit.py
tests/test_properties/: test_constant_ring_properties.py  test_diff_ring_properties.py
tests/test_unit/: test_diff_ring_unit.py
