[project]
name = "diffalgebra"
authors = [{name = "Mikhail Troshkin", email = "tr2mikh@gmail.com"}]
version = "0.1.0"
description = "A package for symbolic computations in free differential algebras"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
]

[tool.pytest]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]